# slackteams

./: .env.example  .gitignore  KNOWN_ISSUES.md  LICENSE  README.md  REVIEW.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/agents/: test-writer.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  lib.rs  main.rs
src/components/: index.ts
src/components/Auth/: LoginScreen.tsx
src/components/ErrorBoundary/: ErrorBoundary.tsx
src/components/MainContent/: MainContent.tsx
src/components/MessageInput/: MessageInput.tsx
src/components/MessageList/: Message.tsx  MessageList.tsx
src/components/Sidebar/: DirectMessages.tsx  Sidebar.tsx  TeamSection.tsx
src/components/ThreadView/: ThreadView.tsx
src/components/Toast/: ToastContainer.tsx
src/components/UserPresence/: Avatar.tsx  PresenceIndicator.tsx
src/hooks/: index.ts  useAuth.test.ts  useAuth.ts  usePresence.ts  useTeams.test.ts  useTeams.ts
src/services/: auth.test.ts  auth.ts  graph.test.ts  graph.ts
src/stores/: appStore.test.ts  appStore.ts  toastStore.test.ts  toastStore.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: api.test.ts  api.ts  index.ts  logger.test.ts  logger.ts  sanitize.test.ts  sanitize.ts  validation.test.ts  validation.ts
