[package]
name = "slackteams"
version = "0.1.0"
description = "A lightweight Microsoft Teams client with Slack-inspired UI"
authors = ["SlackTeams"]
license = "MIT"
repository = "https://github.com/slackteams/slackteams"
homepage = "https://slackteams.app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "slackteams_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
keyring = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
